# cmake-conan-crossbuild

./: CMakeLists.txt  README.md  conanfile.txt  profile-armv7.conan  toolchain-armv7.cmake
src/: main.cpp
